--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,10 @@ body {
   box-shadow: 10px 10px 5px rgb(147, 153, 155);
 }
 
-.image-container:hover {
+/* .image-container:hover {
   cursor: pointer;
   transform: scale(1.04);
-}
+} */
 
 .image-container:hover .overlay {
   opacity: 1;
@@ -70,4 +70,30 @@ body {
   color: white;
   transform: scale(1.7);
   transition: transform 0.3s;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.169);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-inner {
+  position: relative;
+  padding: 32px;
+  width: 100%;
+  max-width: 640px;
+  background-color: white;
+}
+
+.popup-inner .close-btn {
+  position: absolute;
+  top: 16px;
+  right: 16px;
 }
